bzr-builddeb (2.7.9) UNRELEASED; urgency=low

  * Support .tar.xz Debian files rather than .tar.lzma.

 -- Jelmer Vernooij <jelmer@debian.org>  Fri, 09 Sep 2011 15:21:22 +0200

bzr-builddeb (2.7.8) unstable; urgency=low

  * Improve error message when tag for upstream version can not be
    found. LP: #783882
  * Cope with newer versions of bzr raising IOError rather than
    NoSuchFile error. LP: #831351, Closes: #638219
  * Print proper error if uscan doesn't create the expected orig
    tarball. LP: #818093.

 -- Jelmer Vernooij <jelmer@debian.org>  Wed, 07 Sep 2011 22:11:47 +0200

bzr-builddeb (2.7.7) unstable; urgency=low

  [ Jelmer Vernooij ]
  * Build type now defaults to normal mode when used in an empty tree.
    LP: #776528

  [ Andrew Bennetts ]
  * Use dpkg-mergechangelogs(1) to merge changelog files.
   + Preserve the existing ordering of changelog entries when merging.
     LP: #718944
   + Additional changelog entries are modified when merging another branch.
     LP: #552950
   + 3-way changelog file merge doesn't do textual merging on sections.
     LP: #517093
   + 3-way changelog file merge doesn't support deletions. LP: #517090

  [ Jelmer Vernooij ]
  * Add python-lzma to build dependencies, for use in test suite.
  * Recommend libalgorithm-merge-perl, required for conflict resolution
    in dpkg-mergechangelogs.

 -- Jelmer Vernooij <jelmer@debian.org>  Tue, 26 Jul 2011 15:10:18 +0200

bzr-builddeb (2.7.6) unstable; urgency=low

  * Bump standards version to 3.9.2 (no changes).
  * Fix AttributeError in incremental imports using 'bzr import-dsc'.
    LP: #812950
  * Support --package-merge for the first package version. LP: #812704

 -- Jelmer Vernooij <jelmer@debian.org>  Tue, 19 Jul 2011 17:35:39 +0200

bzr-builddeb (2.7.5) unstable; urgency=low

  [ Jelmer Vernooij ]
  * New 'bzr dep3-patch' subcommand that can generate DEP-3 compliant
    patches. LP: #460576

  [ Jonathan Riddell ]